--- a/meson_options.txt
+++ b/meson_options.txt
@@ -19,66 +19,66 @@ option('network_tests', type: 'boolean', value: true, description: 'Allow networ
 
 option('ctags_path', type: 'string', value: '')
 
-option('plugin_autotools', type: 'boolean')
-option('plugin_beautifier', type: 'boolean')
-option('plugin_c_pack', type: 'boolean')
-option('plugin_cargo', type: 'boolean')
-option('plugin_clang', type: 'boolean')
-option('plugin_cmake', type: 'boolean')
-option('plugin_codespell', type: 'boolean')
-option('plugin_code_index', type: 'boolean')
-option('plugin_color_picker', type: 'boolean')
-option('plugin_copyright', type: 'boolean')
-option('plugin_ctags', type: 'boolean')
-option('plugin_devhelp', type: 'boolean')
+option('plugin_autotools', type: 'boolean', value: false)
+option('plugin_beautifier', type: 'boolean', value: false)
+option('plugin_c_pack', type: 'boolean', value: false)
+option('plugin_cargo', type: 'boolean', value: false)
+option('plugin_clang', type: 'boolean', value: false)
+option('plugin_cmake', type: 'boolean', value: false)
+option('plugin_codespell', type: 'boolean', value: false)
+option('plugin_code_index', type: 'boolean', value: false)
+option('plugin_color_picker', type: 'boolean', value: false)
+option('plugin_copyright', type: 'boolean', value: false)
+option('plugin_ctags', type: 'boolean', value: false)
+option('plugin_devhelp', type: 'boolean', value: false)
 option('plugin_deviced', type: 'boolean', value: false)
-option('plugin_dspy', type: 'boolean')
-option('plugin_editorconfig', type: 'boolean')
-option('plugin_eslint', type: 'boolean')
-option('plugin_file_search', type: 'boolean')
-option('plugin_flatpak', type: 'boolean')
-option('plugin_gdb', type: 'boolean')
-option('plugin_gdiagnose', type: 'boolean')
-option('plugin_gettext', type: 'boolean')
-option('plugin_git', type: 'boolean')
-option('plugin_gjs_symbols', type: 'boolean')
-option('plugin_glade', type: 'boolean')
-option('plugin_gnome_code_assistance', type: 'boolean')
-option('plugin_go_langserv', type: 'boolean')
-option('plugin_gradle', type: 'boolean')
-option('plugin_grep', type: 'boolean')
-option('plugin_gvls', type: 'boolean')
-option('plugin_html_completion', type: 'boolean')
-option('plugin_html_preview', type: 'boolean')
-option('plugin_jedi_language_server', type: 'boolean')
-option('plugin_jhbuild', type: 'boolean')
-option('plugin_make', type: 'boolean')
-option('plugin_maven', type: 'boolean')
-option('plugin_meson', type: 'boolean')
-option('plugin_modelines', type: 'boolean')
-option('plugin_mono', type: 'boolean')
-option('plugin_newcomers', type: 'boolean')
-option('plugin_notification', type: 'boolean')
-option('plugin_npm', type: 'boolean')
-option('plugin_phpize', type: 'boolean')
-option('plugin_podman', type: 'boolean')
-option('plugin_python_pack', type: 'boolean')
-option('plugin_qemu', type: 'boolean')
-option('plugin_quick_highlight', type: 'boolean')
-option('plugin_retab', type: 'boolean')
+option('plugin_dspy', type: 'boolean', value: false)
+option('plugin_editorconfig', type: 'boolean', value: false)
+option('plugin_eslint', type: 'boolean', value: false)
+option('plugin_file_search', type: 'boolean', value: false)
+option('plugin_flatpak', type: 'boolean', value: false)
+option('plugin_gdb', type: 'boolean', value: false)
+option('plugin_gdiagnose', type: 'boolean', value: false)
+option('plugin_gettext', type: 'boolean', value: false)
+option('plugin_git', type: 'boolean', value: false)
+option('plugin_gjs_symbols', type: 'boolean', value: false)
+option('plugin_glade', type: 'boolean', value: false)
+option('plugin_gnome_code_assistance', type: 'boolean', value: false)
+option('plugin_go_langserv', type: 'boolean', value: false)
+option('plugin_gradle', type: 'boolean', value: false)
+option('plugin_grep', type: 'boolean', value: false)
+option('plugin_gvls', type: 'boolean', value: false)
+option('plugin_html_completion', type: 'boolean', value: false)
+option('plugin_html_preview', type: 'boolean', value: false)
+option('plugin_jedi_language_server', type: 'boolean', value: false)
+option('plugin_jhbuild', type: 'boolean', value: false)
+option('plugin_make', type: 'boolean', value: false)
+option('plugin_maven', type: 'boolean', value: false)
+option('plugin_meson', type: 'boolean', value: false)
+option('plugin_modelines', type: 'boolean', value: false)
+option('plugin_mono', type: 'boolean', value: false)
+option('plugin_newcomers', type: 'boolean', value: false)
+option('plugin_notification', type: 'boolean', value: false)
+option('plugin_npm', type: 'boolean', value: false)
+option('plugin_phpize', type: 'boolean', value: false)
+option('plugin_podman', type: 'boolean', value: false)
+option('plugin_python_pack', type: 'boolean', value: false)
+option('plugin_qemu', type: 'boolean', value: false)
+option('plugin_quick_highlight', type: 'boolean', value: false)
+option('plugin_retab', type: 'boolean', value: false)
 option('plugin_rls', type: 'boolean', value: false)
-option('plugin_rust_analyzer', type: 'boolean')
-option('plugin_shellcmd', type: 'boolean')
-option('plugin_spellcheck', type: 'boolean')
-option('plugin_stylelint', type: 'boolean')
-option('plugin_sysprof', type: 'boolean')
-option('plugin_sysroot', type: 'boolean')
-option('plugin_todo', type: 'boolean')
-option('plugin_update_manager', type: 'boolean')
-option('plugin_vala', type: 'boolean')
+option('plugin_rust_analyzer', type: 'boolean', value: false)
+option('plugin_shellcmd', type: 'boolean', value: false)
+option('plugin_spellcheck', type: 'boolean', value: false)
+option('plugin_stylelint', type: 'boolean', value: false)
+option('plugin_sysprof', type: 'boolean', value: false)
+option('plugin_sysroot', type: 'boolean', value: false)
+option('plugin_todo', type: 'boolean', value: false)
+option('plugin_update_manager', type: 'boolean', value: false)
+option('plugin_vala', type: 'boolean', value: false)
 option('plugin_vagrant', type: 'boolean', value: false)
-option('plugin_valgrind', type: 'boolean')
-option('plugin_vls', type: 'boolean')
-option('plugin_waf', type: 'boolean')
-option('plugin_words', type: 'boolean')
-option('plugin_xml_pack', type: 'boolean')
+option('plugin_valgrind', type: 'boolean', value: false)
+option('plugin_vls', type: 'boolean', value: false)
+option('plugin_waf', type: 'boolean', value: false)
+option('plugin_words', type: 'boolean', value: false)
+option('plugin_xml_pack', type: 'boolean', value: false)
