build: set incompatible-pointer-types
We can have this now that we have new GLib and newer Meson requirement.

--- a/meson.build
+++ b/meson.build
@@ -141,8 +141,7 @@ test_c_args = [
   '-Werror=empty-body',
   '-Werror=implicit',
   '-Werror=implicit-function-declaration',
-  # Ignore until mkenums is fixed
-  # '-Werror=incompatible-pointer-types',
+  '-Werror=incompatible-pointer-types',
   '-Werror=init-self',
   '-Werror=int-conversion',
   '-Werror=int-to-pointer-cast',
