build: start on GTK 4 build system changes
This gets the initial configuration going (with all plugins disabled)
even though it wont build yet. We will need to start removing the
libdazzle bits from libide as well as reduce/remove libide-sourceview
now that most things are in GtkSourceView 5.x.

--- a/src/libide/webkit/meson.build
+++ b/src/libide/webkit/meson.build
@@ -1,3 +1,6 @@
+libwebkit_dep = dependency('webkit2gtk-5.0', required: false)
+
+if libwebkit_dep.found()
 
 #
 # Sources
@@ -43,3 +46,5 @@ libide_webkit_dep = declare_dependency(
   include_directories: include_directories('.'),
               sources: libide_webkit_generated_headers,
 )
+
+endif
