search: improve (im)mutable fuzzy indexers

--- a/src/libide/search/meson.build
+++ b/src/libide/search/meson.build
@@ -7,6 +7,11 @@ libide_include_directories += include_directories('.')
 #
 
 libide_search_public_headers = [
+  'ide-fuzzy-index-builder.h',
+  'ide-fuzzy-index-cursor.h',
+  'ide-fuzzy-index.h',
+  'ide-fuzzy-index-match.h',
+  'ide-fuzzy-mutable-index.h',
   'ide-pattern-spec.h',
   'ide-search-engine.h',
   'ide-search-provider.h',
@@ -22,6 +27,11 @@ install_headers(libide_search_public_headers, subdir: libide_search_header_subdi
 #
 
 libide_search_public_sources = [
+  'ide-fuzzy-index-builder.c',
+  'ide-fuzzy-index.c',
+  'ide-fuzzy-index-cursor.c',
+  'ide-fuzzy-index-match.c',
+  'ide-fuzzy-mutable-index.c',
   'ide-pattern-spec.c',
   'ide-search-engine.c',
   'ide-search-provider.c',
