gui: add libadwaita dependency

--- a/src/libide/gui/meson.build
+++ b/src/libide/gui/meson.build
@@ -175,6 +175,7 @@ libide_gui_sources += libide_gui_resources
 libide_gui_deps = [
   libgio_dep,
   libgtk_dep,
+  libadwaita_dep,
   libgtksource_dep,
   libpeas_dep,
 
