gui: move IdeMenuManager to libide-gui
We actually need GTK access here for GtkBuildable, so just keep it in
libide-gui.

--- a/src/libide/gui/meson.build
+++ b/src/libide/gui/meson.build
@@ -26,6 +26,7 @@ libide_gui_public_headers = [
   'ide-gui-global.h',
   'ide-header-bar.h',
   'ide-marked-view.h',
+  'ide-menu-manager.h',
   'ide-notifications-button.h',
   'ide-omni-bar-addin.h',
   'ide-omni-bar.h',
@@ -128,6 +129,7 @@ libide_gui_public_sources = [
   'ide-gui-global.c',
   'ide-header-bar.c',
   'ide-marked-view.c',
+  'ide-menu-manager.c',
   'ide-notifications-button.c',
   'ide-omni-bar-addin.c',
   'ide-omni-bar.c',
