--- a/src/plugins/meson.build
+++ b/src/plugins/meson.build
@@ -202,8 +202,8 @@ status += [
   'Sysroot ............... : @0@'.format(get_option('plugin_sysroot')),
   'Todo .................. : @0@'.format(get_option('plugin_todo')),
   'Update Manager ........ : @0@'.format(get_option('plugin_update_manager')),
-  'GNOME Vala LS ......... : @0@'.format(get_option('plugin_gvls')),
-  'Vala Language Server .. : @0@'.format(get_option('plugin_vls')),
+  'GNOME Vala Lang Server. : @0@'.format(get_option('plugin_gvls')),
+  'Alternate Vala Lang Srv : @0@'.format(get_option('plugin_vls')),
   'Vala Pack ............. : @0@'.format(get_option('plugin_vala')),
   'Vagrant ............... : @0@'.format(get_option('plugin_vagrant')),
   'Valgrind .............. : @0@'.format(get_option('plugin_valgrind')),
