Added Alusus style and language specs.

--- a/data/meson.build
+++ b/data/meson.build
@@ -2,6 +2,7 @@ subdir('appdata')
 subdir('fonts')
 subdir('gsettings')
 subdir('icons')
+subdir('language-specs')
 subdir('style-schemes')
 
 # Desktop launcher and description file.
