--- a/data/style-schemes/meson.build
+++ b/data/style-schemes/meson.build
@@ -3,4 +3,6 @@ install_data([
   'builder-dark.style-scheme.xml',
   'Adwaita.style-scheme.xml',
   'Adwaita-dark.style-scheme.xml',
+  'alusus_dark_style.xml',
+  'alusus_light_style.xml',
 ], install_dir: join_paths(get_option('datadir'), 'gtksourceview-4/styles'))
