Fixed and cleaned up Alusus plugin.

--- a/src/plugins/alusus/meson.build
+++ b/src/plugins/alusus/meson.build
@@ -1,16 +1,16 @@
 meson_templates_resources = gnome.compile_resources(
-  'alusus_templates',
-  'alusus-templates.gresource.xml',
+  'alusus_plugin',
+  'alusus.gresource.xml',
   gresource_bundle: true,
            install: true,
        install_dir: plugindir,
 )
 
-install_data('alusus_templates.py', install_dir: plugindir)
+install_data('alusus_plugin.py', install_dir: plugindir)
 
 configure_file(
-          input: 'alusus-templates.plugin',
-         output: 'alusus-templates.plugin',
+          input: 'alusus.plugin',
+         output: 'alusus.plugin',
   configuration: config_h,
         install: true,
     install_dir: plugindir,
