--- a/AppImge yml file/AppImageBuilder.yml
+++ b/AppImge yml file/AppImageBuilder.yml
@@ -19,16 +19,16 @@ AppDir:
       - amd64
     allow_unauthenticated: true
     sources:
-      - sourceline: deb http://us.archive.ubuntu.com/ubuntu/ impish main restricted
-      - sourceline: deb http://us.archive.ubuntu.com/ubuntu/ impish-updates main restricted
-      - sourceline: deb http://us.archive.ubuntu.com/ubuntu/ impish universe
-      - sourceline: deb http://us.archive.ubuntu.com/ubuntu/ impish-updates universe
-      - sourceline: deb http://us.archive.ubuntu.com/ubuntu/ impish multiverse
-      - sourceline: deb http://us.archive.ubuntu.com/ubuntu/ impish-updates multiverse
-      - sourceline: deb http://us.archive.ubuntu.com/ubuntu/ impish-backports main restricted universe multiverse
-      - sourceline: deb http://security.ubuntu.com/ubuntu impish-security main restricted
-      - sourceline: deb http://security.ubuntu.com/ubuntu impish-security universe
-      - sourceline: deb http://security.ubuntu.com/ubuntu impish-security multiverse
+      - sourceline: deb http://archive.ubuntu.com/ubuntu/ jammy main restricted
+      - sourceline: deb http://archive.ubuntu.com/ubuntu/ jammy universe
+      - sourceline: deb http://archive.ubuntu.com/ubuntu/ jammy multiverse
+      - sourceline: deb http://archive.ubuntu.com/ubuntu/ jammy-updates main restricted
+      - sourceline: deb http://archive.ubuntu.com/ubuntu/ jammy-updates universe
+      - sourceline: deb http://archive.ubuntu.com/ubuntu/ jammy-updates multiverse
+      - sourceline: deb http://archive.ubuntu.com/ubuntu/ jammy-backports main restricted universe multiverse
+      - sourceline: deb http://security.ubuntu.com/ubuntu jammy-security main restricted
+      - sourceline: deb http://security.ubuntu.com/ubuntu jammy-security universe
+      - sourceline: deb http://security.ubuntu.com/ubuntu jammy-security multiverse
     include:
       # Direct dependencies
       - libglib2.0-0
@@ -53,7 +53,9 @@ AppDir:
       - libsysprof-ui-4
       - libpangoft2-1.0-0
       - libfontconfig1
-      - libportal0
+      - libportal1
+      - libportal-gtk3-1
+      - libcmark0.30.2
       - libc6
       - libdevhelp-3-6
       - libflatpak0
@@ -71,6 +73,8 @@ AppDir:
       - gir1.2-template-1.0
       - gir1.2-vte-2.91
       - gir1.2-webkit2-4.0
+      - gir1.2-handy-1
+      - gir1.2-xdpgtk3-1.0
       - libcanberra-gtk3-module
       - librsvg2-common
       - libgit2-glib-1.0-0
@@ -87,8 +91,8 @@ AppDir:
       - fonts-noto-ui-core
       - language-pack-gnome-ar-base
   after_bundle: |
-    mkdir "$APPDIR/usr/lib/x86_64-linux-gnu/libpeas-1.0/loaders/python3"
-    mv "$APPDIR/usr/lib/x86_64-linux-gnu/libpeas-1.0/loaders/libpython3loader.so" "$APPDIR/usr/lib/x86_64-linux-gnu/libpeas-1.0/loaders/python3/"
+    mkdir "$TARGET_APPDIR/usr/lib/x86_64-linux-gnu/libpeas-1.0/loaders/python3"
+    mv "$TARGET_APPDIR/usr/lib/x86_64-linux-gnu/libpeas-1.0/loaders/libpython3loader.so" "$TARGET_APPDIR/usr/lib/x86_64-linux-gnu/libpeas-1.0/loaders/python3/"
   runtime:
     env:
       APPDIR_PATH: '${APPDIR}'
@@ -98,27 +102,6 @@ AppDir:
       GDK_PIXBUF_MODULEDIR: '$APPDIR/usr/lib/x86_64-linux-gnu/gdk-pixbuf-2.0/2.10.0/loaders/'
       PYTHONHOME: '${APPDIR}/usr'
       PYTHONPATH: '${APPDIR}/usr/lib/python3.9:${APPDIR}/usr/lib/python3.9/lib-dynload:${APPDIR}/usr/lib/python3/dist-packages'
-  test:
-    fedora-30:
-      image: appimagecrafters/tests-env:fedora-30
-      command: ./AppRun
-      use_host_x: true
-    debian-stable:
-      image: appimagecrafters/tests-env:debian-stable
-      command: ./AppRun
-      use_host_x: true
-    archlinux-latest:
-      image: appimagecrafters/tests-env:archlinux-latest
-      command: ./AppRun
-      use_host_x: true
-    centos-7:
-      image: appimagecrafters/tests-env:centos-7
-      command: ./AppRun
-      use_host_x: true
-    ubuntu-xenial:
-      image: appimagecrafters/tests-env:ubuntu-xenial
-      command: ./AppRun
-      use_host_x: true
 AppImage:
   arch: x86_64
   update-information: guess
